--- a/index.html
+++ b/index.html
@@ -290,11 +290,11 @@
     </div>
     
 
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script>
     window.jQuery || document.write('<script src="https:\/\/sohlich.github.io\/js/jquery-1.11.0.min.js"><\/script>')
 </script>
-<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 
 <script src="https://sohlich.github.io/js/jquery.cookie.js"></script>
 <script src="https://sohlich.github.io/js/waypoints.min.js"></script>
